--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ python:
   - "3.4"
   - "3.5"
 
+before_install:
+  sudo apt-get update
+  sudo apt-get install cmake
+  
 # command to install dependencies
 install:
   - pip install -r requirements.txt
