--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,11 @@
-language: python
-python:
-  - "2.7"
-  - "3.3"
-  - "3.4"
-  - "3.5"
+language: c++
 
 before_install:
-  sudo apt-get update
-  sudo apt-get install cmake
+  - sudo apt-get update
+  - sudo apt-get install cmake
   
 # command to install dependencies
-install:
-  - pip install -r requirements.txt
+install: true
+  
 # command to run tests
-script: nosetests
+
