--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ language: c++
 before_install:
   - sudo apt-get update
   - sudo apt-get install cmake
+  - sudo apt-get install gcc
   
 # command to install dependencies
 install: true
