--- a/.travis.yml
+++ b/.travis.yml
@@ -45,9 +45,11 @@ matrix:
 
 before_install:
   - sudo apt-get update
-  - sudo apt-get install cmake
-  - sudo apt-get install gcc
+  - mkdir cmake && travis_retry wget --quiet -O - http://www.cmake.org/files/v3.3/cmake-3.3.1-Linux-x86_64.tar.gz | tar --strip-components=1 -xz -C cmake
+  - export PATH=${DEPS_DIR}/cmake/bin:${PATH}
   
+  - cmake --version
+
 # command to install dependencies
 install: true
   
