--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,7 @@ before_install:
   - export PATH=${DEPS_DIR}/cmake/bin:${PATH}
   
   - cmake --version
-  = $COMPILER --version
+  - $COMPILER --version
 
 # command to install dependencies
 install: true
