--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ matrix:
 
 
 before_install:
-  - wget --quiet -O - http://cmake.org/files/v3.5/cmake-3.5.2-Linux-x86_64.tar.gz
+  - wget -O - http://cmake.org/files/v3.5/cmake-3.5.2-Linux-x86_64.tar.gz
   - sudo apt-get update
   - mkdir cmake && travis_retry wget --quiet -O - http://cmake.org/files/v3.5/cmake-3.5.2-Linux-x86_64.tar.gz | tar --strip-components=1 -xz -C cmake
   - export PATH=${DEPS_DIR}/cmake/bin:${PATH}
