--- a/.travis.yml
+++ b/.travis.yml
@@ -36,9 +36,10 @@ matrix:
 
 before_install:
   - sudo apt-get update
-  - mkdir cmake && travis_retry wget --quiet --no-check-certificate -O - https://cmake.org/files/v3.5/cmake-3.5.2-Linux-x86_64.tar.gz | tar --strip-components=1 -xz -C cmake
+#  - mkdir cmake && travis_retry wget --quiet --no-check-certificate -O - https://cmake.org/files/v3.5/cmake-3.5.2-Linux-x86_64.tar.gz | tar --strip-components=1 -xz -C cmake
   - export PATH=${DEPS_DIR}/cmake/bin:${PATH}
-  
+  - echo DEPS_DIR=$DEPS_DIR
+  - cmake/bin/cmake --version
   - cmake --version
   - $COMPILER --version
 
