--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@ language: c++
 os:
  - linux
  - osx
-# Use new trusty images, should yield newer compilers and packages
+ 
+osx_image: xcode7.3
+
 sudo: required
 dist: precise
 language: cpp
@@ -17,29 +19,12 @@ matrix:
           packages:
             - g++-4.9
       env: COMPILER=g++-4.9
-    - compiler: gcc
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-          packages:
-            - g++-5
-      env: COMPILER=g++-5
-#    - compiler: clang
-#      addons:
-#        apt:
-#          sources:
-#            - ubuntu-toolchain-r-test
-#            - llvm-toolchain-precise-3.7
-#          packages:
-#            - clang-3.7
-#      env: COMPILER=clang++-3.7
-
 
 before_install:
   - ifmac () { if [[ $TRAVIS_OS_NAME == osx ]]; then eval $@; fi; }
   - iflin () { if [[ $TRAVIS_OS_NAME == linux ]]; then eval $@; fi; }
-  - sudo apt-get update
+  - iflin sudo apt-get update
+  - ifmac brew update
   - iflin mkdir cmake && travis_retry wget --quiet --no-check-certificate -O - https://cmake.org/files/v3.5/cmake-3.5.2-Linux-x86_64.tar.gz | tar --strip-components=1 -xz -C cmake
   - ifmac mkdir cmake && travis_retry wget --quiet --no-check-certificate -O - https://cmake.org/files/v3.5/cmake-3.5.2-Darwin-x86_64.tar.gz | tar --strip-components=1 -xz -C cmake
   - export PATH=$PWD/cmake/bin:${PATH}
