--- a/.travis.yml
+++ b/.travis.yml
@@ -14,11 +14,14 @@ before_install:
   - iflin () { if [[ $TRAVIS_OS_NAME == linux ]]; then eval $@; fi; }
   - iflin sudo apt-get update
   - ifmac brew update
+  - ifmac brew tap homebrew/versions
+  - ifmac brew outdated cmake || brew upgrade cmake
   - iflin mkdir cmake && travis_retry wget --quiet --no-check-certificate -O - https://cmake.org/files/v3.5/cmake-3.5.2-Linux-x86_64.tar.gz | tar --strip-components=1 -xz -C cmake
-  - ifmac mkdir cmake && travis_retry wget --quiet --no-check-certificate -O - https://cmake.org/files/v3.5/cmake-3.5.2-Darwin-x86_64.tar.gz | tar --strip-components=1 -xz -C cmake
-  - export PATH=$PWD/cmake/bin:${PATH}
-  - cmake/bin/cmake --version
+#  - ifmac mkdir cmake && travis_retry wget --quiet --no-check-certificate -O - https://cmake.org/files/v3.5/cmake-3.5.2-Darwin-x86_64.tar.gz | tar --strip-components=1 -xz -C cmake
+  - iflin export PATH=$PWD/cmake/bin:${PATH}
+#  - cmake/bin/cmake --version
   - cmake --version
+  - iflin sudo add-apt-repository --yes ppa:ubuntu-toolchain-r/test
   - iflin sudo apt-get install --yes build-essential gcc-4.9 g++-4.9 cmake pkg-config 
   - iflin sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.9 60 --slave /usr/bin/g++ g++ /usr/bin/g++-4.9
   - iflin sudo update-alternatives --auto gcc
