--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,22 @@
-language: c++
+compiler:
+ - gcc
+ 
 os:
  - linux
  - osx
  
 osx_image: xcode7.3
 
+cache:
+ - apt
+
 sudo: required
-dist: precise
+dist: trusty
 language: cpp
 
 before_install:
   - ifmac () { if [[ $TRAVIS_OS_NAME == osx ]]; then eval $@; fi; }
   - iflin () { if [[ $TRAVIS_OS_NAME == linux ]]; then eval $@; fi; }
-  - iflin sudo apt-get update
   - ifmac brew update
   - ifmac brew tap homebrew/versions
   - ifmac brew outdated cmake || brew upgrade cmake
@@ -20,11 +24,12 @@ before_install:
 #  - ifmac mkdir cmake && travis_retry wget --quiet --no-check-certificate -O - https://cmake.org/files/v3.5/cmake-3.5.2-Darwin-x86_64.tar.gz | tar --strip-components=1 -xz -C cmake
   - iflin export PATH=$PWD/cmake/bin:${PATH}
 #  - cmake/bin/cmake --version
-  - cmake --version
   - iflin sudo add-apt-repository --yes ppa:ubuntu-toolchain-r/test
+  - iflin sudo apt-get update
   - iflin sudo apt-get install --yes build-essential gcc-4.9 g++-4.9 cmake pkg-config 
   - iflin sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.9 60 --slave /usr/bin/g++ g++ /usr/bin/g++-4.9
   - iflin sudo update-alternatives --auto gcc
+  - cmake --version
   - gcc --version
 
 # command to install dependencies
