--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ before_install:
   - ifmac brew tap homebrew/versions
   - ifmac brew outdated cmake || brew upgrade cmake
   - iflin mkdir cmake 
-  - iflin travis_retry wget --quiet --no-check-certificate -O - https://cmake.org/files/v3.5/cmake-3.5.2-Linux-x86_64.tar.gz | tar --strip-components=1 -xz -C cmake
+  - iflin travis_retry wget --quiet --no-check-certificate -O - https://cmake.org/files/v3.5/cmake-3.5.2-Linux-x86_64.tar.gz | iflin tar --strip-components=1 -xz -C cmake
   - iflin export PATH=$PWD/cmake/bin:${PATH}
 #  - cmake/bin/cmake --version
   - iflin sudo add-apt-repository --yes ppa:ubuntu-toolchain-r/test
