--- a/.travis.yml
+++ b/.travis.yml
@@ -37,6 +37,7 @@ install: true
   
 # command to make the build
 script:
+  - cd $TRAVIS_BUILD_DIR
   - mkdir build && cd build
   - cmake ..
   - make
